optimized performance & resources

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
 
               <div class="profile">
-                <img src="./Profile.svg" alt="profile_pic">
+                <img src="./Profile.png" alt="profile_pic">
               </div>
             </div>
           </nav>
@@ -42,10 +42,10 @@
     <main>
         <!-- Hero section -->
         <section class="hero">
-            <img src="./hero.svg" alt="hero_section">
+            <img src="./hero.png" alt="hero_section">
             <div class="text">
                 <p class="card-text">Trending now</p>
-                <p class="card-title">Mike’s famous salad with cheese</p>
+                <p class="card-title">Mike's famous salad with cheese</p>
                 <p class="card-subtitle1">By John Mike</p>
             </div>
         </section>
@@ -55,13 +55,13 @@
             <h6>Search For Recipes</h6>
             <div class="search-container">
                 <i class="fa-solid fa-magnifying-glass icons" style="color: #a1a1a1;"></i>
-                <input type="text" id="input-search" class="input-search" placeholder="       Search for recipes...">
+                <input type="search" class="input-search" id="InputSearch" placeholder=" Search for recipes...">
                 <i class="fa-solid fa-magnifying-glass icons-green" style="color: #a1a1a1;"></i>
             </div>
             <div class="sort-container">
-                <button class="btn btn-warning" id="All">All Recipes    ></button>
-                <button class="btn btn-success" id="Veg">Veg Recipes Only    ></button>
-                <button class="btn btn-danger" id="NVeg">Non-Veg Recipes Only   ></button>
+                <button class="btn btn-warning" id="AllRecipes">All Recipes ></button>
+                <button class="btn btn-success" id="VegRecipes">Veg Recipes Only ></button>
+                <button class="btn btn-danger" id="NonVegRecipes">Non-Veg Recipes Only ></button>
             </div>     
         </section>
 
@@ -72,13 +72,13 @@
               <div class="ratings">
                 <h6>Rating</h6>
                 <div class="Rating_checkbox">
-                <div><input type="checkbox" name="4&Above" id="4&Above" data-valid=1><label for="4&Above">4 and Above</label></div>
-                <div><input type="checkbox" name="4&Above" id="Four" data-valid=1><label for="Four">4</label></div>
+                <div><input type="checkbox" name="Filter_four_above" id="Filter_four_above" data-valid=1 ><label for="Filter_four_above">4 and Above</label></div>
+                <div><input type="checkbox" name="Filter_four_below" id="Filter_four_below" data-valid=1 ><label for="Filter_four_below">4 and Below</label></div>
               </div>
               </div>
             </div>
 
-            <div class="product_area" id="product_area">
+            <div class="product_area" id="ProductArea">
 
               <!-- <div class="card" >
                 <img src="./pngegg.png" alt="product_image" class="card-img-top" />
@@ -146,7 +146,7 @@
           <div class="footer-contact">
             <img src="./Cookpal_logo.svg" alt="">
             <p>Ut risus mattis interdum faucibus facilisi. Facilisi purus accumsan aliquam.</p>
-            <div><input type="email" name="" id="" placeholder="Your Email "><i class="fa-solid fa-at left" style="color: #8f8f8f;"></i>
+            <div class="email-Subscribe"><input type="email" name="" id="" placeholder="Your Email "><i class="fa-solid fa-at left" style="color: #8f8f8f;"></i>
             <button class="btn-Subscribe">Subscribe</button></div>
           </div>
         </div>
