--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light  custom-navbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="./Cookpal_logo.svg" alt="Cookpal_logo"></a>
+              <a class="navbar-brand" href="#"><img src="./Cookpal_logo.ico" alt="Cookpal_logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
