--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <section>
         <div class="footer-content">
           <div class="footer-text">
-            <img src="./Cookpal_logo.svg" alt="">
+            <img src="./Cookpal_logo.png" alt="">
             <p>Cookpal is a recipe website with a wide variety of delicious recipes, easy-to-use search function. Join our community and let's cook together!</p>
           </div>
           <div class="footer-links">
@@ -144,7 +144,7 @@
           </table>
           </div>
           <div class="footer-contact">
-            <img src="./Cookpal_logo.svg" alt="">
+            <img src="./Cookpal_logo.png" alt="">
             <p>Ut risus mattis interdum faucibus facilisi. Facilisi purus accumsan aliquam.</p>
             <div class="email-Subscribe"><input type="email" name="" id="" placeholder="Your Email "><i class="fa-solid fa-at left" style="color: #8f8f8f;"></i>
             <button class="btn-Subscribe">Subscribe</button></div>
@@ -162,3 +162,4 @@
     <script src="./script.js"></script>
 </body>
 </html>
+<!--figma link-> https://www.figma.com/file/12nxk5KkFvCBTPVvCJwHcG/Frontend-2?type=design&node-id=0-1&mode=design&t=bLrE6oG6XNgND8oZ-0 -->
